[tool.poetry]
name = "pse"
version = "0.1.0"
description = "PyTorch implementation of \"Contrastive Behavioral Similarity Embeddings for Generalization in Reinforcement Learning\""
authors = ["Ruben Jacob <rubenjacob@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
torch = "^1.10"
numpy = "^1.19"
absl-py = "^1.0.0"
termcolor = "^1.1.0"
dm_control = { git = "git@github.com:deepmind/dm_control.git", rev = "ff8a9caac9d845c1e1f669c272294b3355d6d855" }
distracting_control = { git = "git@github.com:rubenjacob/distracting_control_without_tf.git"}
hydra-core = "^1.1.0"
wandb = "^0.12"
cw2 = { git = "git@github.com:ALRhub/cw2.git" }
imageio = "^2.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
